# Believe-It-or-Not

./: .coveragerc  .doit.db  .gitignore  README.md  dodo.py  pyproject.toml  requirements-dev.txt
believe/: __init__.py
believe/client/: __init__.py  __main__.py
believe/common/: __init__.py
believe/server/: __init__.py  __main__.py  game.py
believe/server/po/: believe_server.pot
believe/server/po/ru_BY/LC_MESSAGES/: believe_server.po
believe/server/po/ru_RU/LC_MESSAGES/: believe_server.po
doc/: API.rst  conf.py  index.rst
tests/: __init__.py  test_client.py  test_game.py  test_server.py
